SP-1413: z-index fixed on top bar

--- a/src/components/AppHeader.scss
+++ b/src/components/AppHeader.scss
@@ -236,6 +236,7 @@ Less me
 	.headroom--top{
 		background-color: #ffffff;
 		box-shadow: 0px 1px 8px -5px;
+		z-index: 2;
 	}
 	.app-bar-buttons{
 		color: #000000;
